# rgit

./: .gitignore  Cargo.toml
src/: cmd.rs  lib.rs  main.rs  object.rs
src/fs/: inmem.rs  linux.rs  macos.rs  mod.rs
src/index/: mod.rs
src/object/: blob.rs  commit.rs  mod.rs  tree.rs
