[package]
name = "rgit"
version = "0.1.0"
authors = ["yusei-wy <yusei.kasa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libflate = "1.0.2"
sha-1 = { version = "0.9.1", default-features = true }
chrono = { version = "0.4.15", features = ["serde"] }
hex = "0.4.2"
serde = { version = "1.0.116", features = ["derive"], optional = true }
